@@ -511,6 +511,8 @@ $('#vboxPane').bind('vmSelectionListChanged',function(e) {
 					vboxUpdateSettingsMenu(d);
 				});
 			
+		} else {
+			vboxUpdateSettingsMenu();
 		}
 		
 	} else if(updateVRDE) {
